2003-11-08  Beckett Madden-Woods  <beckett@beckettmw.com> 1.4.1-RC1

	* v1.4.1 Release Candidate 1

	* Bumped Config. Wizard version (forgot to do it in -b216).

2003-11-08 Jens Tkotz <jens@peino.de> 1.4.1-cvs-b217

        * Change: It seems we can use ML with PHP < 4.1.0 ; removed checks and
	  warning.

	* Change: Fixed naming of "Default" Skin to "None".

        * Language: Update German (de_DE)

2003-11-08  Beckett Madden-Woods  <beckett@beckettmw.com> 1.4.1-cvs-b216

	* Removed the "default" skin so we use the original files instead. Now
	  we call the default skin "none". Hopefully that's not too confusing.

	* Fixed typos in util.php and in functions.inc.
	
2003-11-07 Andrew Lindeman  <joyoflinux@yahoo.com> 1.4.1-cvs-b215

	* Changed recommended chmod value for the setup/ directory
	  to 400, to prevent insecuries with PHP/suexec.

2003-11-07 Joan McGalliard  <gallery@joanhenge.plus.com> 1.4.1-cvs-b214

	* Fix check_versions.php so it runs on Windows box.

	* Tweaked styles for check_versions.php.

2003-11-07 Joan McGalliard  <gallery@joanhenge.plus.com> 1.4.1-cvs-b213

	* Removed one warning and one potential warning.

2003-11-07 Joan McGalliard  <gallery@joanhenge.plus.com> 1.4.1-cvs-b212

	* FIxed setup/check_version.php so it actually works with partially 
	  upgraded 1.4 Galleries.

2003-11-07 Joan McGalliard  <gallery@joanhenge.plus.com> 1.4.1-cvs-b211

	* Update manifest, and stop error messages if build_manifest.php
	  viewed via browsers.

2003-11-06 Jens Tkotz <jens@peino.de> 1.4.1-cvs-b210

        * Language: Found untranslated strings, Synced all languages against
	  this.

        * Language: Update German (de_DE), Suomi (fi_FI)

2003-11-04 Jens Tkotz <jens@peino.de> 1.4.1-cvs-b209

        * Language: Update German (de_DE), Suomi (fi_FI)

2003-11-04 Jens Tkotz <jens@peino.de> 1.4.1-cvs-b208

        * Bugfix: Fixed Typo and Warning (thanks to Seta)

2003-11-03 Jens Tkotz <jens@peino.de> 1.4.1-cvs-b207
