@@ -1,3 +1,12 @@
+2003-11-09 Joan McGalliard  <gallery@joanhenge.plus.com> 1.4.1-RC1-b1
+
+ 	* Added number of votes to sorting order of voting.  Critique sorts 
+ 	  by the average votes, and this enables differentiation between 
+ 	  one voter giving and image 10/10 while everyone else ignores it 
+ 	  and 400 voter giving it 10/10.  It also means that in rank voting, 
+ 	  if 4 people vote an image 1/4 it will appear higher on the list 
+ 	  than an image that one person rates 4/4.
+
 2003-11-08  Beckett Madden-Woods  <beckett@beckettmw.com> 1.4.1-RC1
 
 	* v1.4.1 Release Candidate 1
